fix pagination cutoff print media bug

--- a/css/global.css
+++ b/css/global.css
@@ -1148,6 +1148,10 @@ form .form-actions .form-submit:hover {
     font-family: Arial, sans-serif;
   }
 
+  #section-content {
+    position: static;
+  }
+
   #region-content {
     width: 100%;
     margin: 0px 0px 20px 0px;
